hammasi pachti tugadi

--- a/contexts/translations/translations.json
+++ b/contexts/translations/translations.json
@@ -3,14 +3,17 @@
     "menu": "Menyu",
     "dashboard": "Boshqaruv paneli",
     "products": "Mahsulotlar",
+    "Add Unit": "Birlik qo‘shish",
     "units": "Birliklar",
+    "Add Object": "Obyekt qo‘shish",
     "categories": "Kategoriyalar",
     "orders": "Buyurtmalar",
-    "users": "Foydalanuvchilar",
+    "users": "Xodimlar",
     "settings": "Sozlamalar",
     "min_quantity": "Minimal miqdor",
     "time": "Vaqt",
     "banners": "Bannerlar",
+    "obyekts": "Obyektlar",
     "profile": "Profil",
     "logout": "Chiqish",
     "language": "Til",
@@ -28,14 +31,14 @@
     "welcomeMessage": "Xush kelibsiz! Do‘koningizdagi yangiliklar mana bu yerda.",
     "totalProducts": "Jami mahsulotlar",
     "activeProducts": "Inventarda faol mahsulotlar",
-    "totalUsers": "Jami foydalanuvchilar",
-    "registeredUsers": "Ro‘yxatdan o‘tgan foydalanuvchilar",
+    "totalUsers": "Jami xodimlar",
+    "registeredUsers": "Ro‘yxatdan o‘tgan xodimlar",
     "totalOrders": "Jami buyurtmalar",
     "ordersThisMonth": "Bu oygi buyurtmalar",
     "revenue": "Daromad",
     "totalRevenue": "Bu oygi jami daromad",
     "conversionRate": "Konversiya ko‘rsatkichi",
-    "visitorsToCustomers": "Mehmonlardan mijozlarga",
+    "visitorsToCustomers": "Mehmonlardan xodimlarga",
     "pageViews": "Sahifa ko‘rishlar",
     "totalPageViews": "Bugungi jami sahifa ko‘rishlar",
     "productCategories": "Mahsulot kategoriyalari",
@@ -87,11 +90,11 @@
     "Saving...": "Saqlanmoqda...",
     "noName": "Ismi yo‘q",
     "noEmail": "Email yo‘q",
-    "allUsers": "Barcha foydalanuvchilar",
+    "allUsers": "Barcha xodimlar",
     "exportExcel": "Excelga eksport qilish",
     "orderId": "Buyurtma ID",
-    "customerName": "Mijozning ismi",
-    "customerEmail": "Mijozning emaili",
+    "customerName": "Xodimning ismi",
+    "customerEmail": "Xodimning emaili",
     "product": "Mahsulot",
     "quantity": "Soni",
     "price": "Narxi",
@@ -101,7 +104,7 @@
     "close": "Yopish",
     "orderDetails": "Buyurtma tafsilotlari",
     "completeOrderInfo": "Ushbu buyurtma haqida to‘liq ma’lumot",
-    "customerInformation": "Mijoz haqida ma’lumot",
+    "customerInformation": "Xodim haqida ma’lumot",
     "orderItems": "Buyurtma elementlari",
     "name": "Ism",
     "email": "Email",
@@ -112,12 +115,12 @@
     "All": "Barchasi",
     "Admin": "Admin",
     "User": "Foydalanuvchi",
-    "No users found. Add a new user to get started.": "Foydalanuvchi topilmadi. Boshlash uchun yangi foydalanuvchi qo‘shing.",
-    "Add User": "Foydalanuvchi qo‘shish",
-    "Manage user accounts": "Foydalanuvchi hisoblarini boshqarish",
+    "No users found. Add a new user to get started.": "Xodim topilmadi. Boshlash uchun yangi xodim qo‘shing.",
+    "Add User": "Xodim qo‘shish",
+    "Manage user accounts": "Xodim hisoblarini boshqarish",
     "First Name": "Ism",
     "Last Name": "Familiya",
-    "Username": "Foydalanuvchi nomi",
+    "Username": "Xodim nomi",
     "Password": "Parol",
     "Leave empty to keep current password": "O‘zgartirmaslik uchun bo‘sh qoldiring",
     "Role": "Rol",
@@ -130,8 +133,10 @@
     "products": "Продукты",
     "categories": "Категории",
     "units": "Единицы",
+    "Add Unit": "Добавить единицы",
     "orders": "Заказы",
-    "users": "Пользователи",
+    "Add Object": "Добавить объект",
+    "users": "Сотрудники",
     "banners": "Баннеры",
     "settings": "Настройки",
     "time": "Время",
@@ -152,14 +157,14 @@
     "welcomeMessage": "Добро пожаловать! Вот что происходит в вашем магазине.",
     "totalProducts": "Всего товаров",
     "activeProducts": "Активные товары на складе",
-    "totalUsers": "Всего пользователей",
-    "registeredUsers": "Зарегистрированные пользователи",
+    "totalUsers": "Всего сотрудников",
+    "registeredUsers": "Зарегистрированные сотрудники",
     "totalOrders": "Всего заказов",
     "ordersThisMonth": "Заказы в этом месяце",
     "revenue": "Доход",
     "totalRevenue": "Общий доход за месяц",
     "conversionRate": "Коэффициент конверсии",
-    "visitorsToCustomers": "Посетителей в клиентов",
+    "visitorsToCustomers": "Посетителей в сотрудников",
     "pageViews": "Просмотры страниц",
     "totalPageViews": "Всего просмотров сегодня",
     "productCategories": "Категории товаров",
@@ -172,6 +177,7 @@
     "Category": "Категория",
     "Unit": "Единица измерения",
     "Units": "Единицы",
+    "obyekts": "Объекты",
     "Telegram ID": "Telegram ID",
     "categoriyEdit": "Редактировать",
     "Code": "Код",
@@ -212,11 +218,11 @@
     "Saving...": "Сохраняется...",
     "noName": "Нет имени",
     "noEmail": "Нет email",
-    "allUsers": "Все пользователи",
+    "allUsers": "Все сотрудники",
     "exportExcel": "Экспорт в Excel",
     "orderId": "ID заказа",
-    "customerName": "Имя клиента",
-    "customerEmail": "Email клиента",
+    "customerName": "Имя сотрудника",
+    "customerEmail": "Email сотрудника",
     "product": "Продукт",
     "quantity": "Количество",
     "price": "Цена",
@@ -226,7 +232,7 @@
     "close": "Закрыть",
     "orderDetails": "Детали заказа",
     "completeOrderInfo": "Полная информация о заказе",
-    "customerInformation": "Информация о клиенте",
+    "customerInformation": "Информация о сотруднике",
     "orderItems": "Элементы заказа",
     "name": "Имя",
     "email": "Электронная почта",
@@ -237,12 +243,12 @@
     "All": "Все",
     "Admin": "Админ",
     "User": "Пользователь",
-    "No users found. Add a new user to get started.": "Пользователи не найдены. Добавьте нового пользователя, чтобы начать.",
-    "Add User": "Добавить пользователя",
-    "Manage user accounts": "Управление учетными записями пользователей",
+    "No users found. Add a new user to get started.": "Сотрудники не найдены. Добавьте нового сотрудника, чтобы начать.",
+    "Add User": "Добавить сотрудника",
+    "Manage user accounts": "Управление учетными записями сотрудников",
     "First Name": "Имя",
     "Last Name": "Фамилия",
-    "Username": "Имя пользователя",
+    "Username": "Имя сотрудника",
     "Password": "Пароль",
     "Leave empty to keep current password": "Оставьте пустым, чтобы не менять",
     "Role": "Роль",
